fix main landing page hero on mobile due to vh bug

--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,34 @@ nav ul li a {
     min-height: 85vh;
 }
 
+/** 
+ * iPad with portrait orientation.
+ */
+ @media all and (device-width: 768px) and (device-height: 1024px) and (orientation:portrait){
+    .hero {
+      height: 1024px;
+    }
+  }
+  
+  /** 
+   * iPad with landscape orientation.
+   */
+  @media all and (device-width: 768px) and (device-height: 1024px) and (orientation:landscape){
+    .hero {
+      height: 768px;
+    }
+  }
+  
+  /**
+   * iPhone 5
+   * You can also target devices with aspect ratio.
+   */
+  @media screen and (device-aspect-ratio: 40/71) {
+    .hero {
+      height: 500px;
+    }
+  }
+
 .blog-hero-size {
     min-height: 40vh;
 }
